feat(about): 添加 B 站介绍视频链接

--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,7 @@
           <h3>关于本工具</h3>
           <p>本工具为《明日方舟：终末地》玩家自制作品，旨在提供可视化的基质刷取规划。</p>
           <p>项目属于早期阶段，可能存在数据错误，如有欢迎反馈指出。</p>
+          <p>作者：璨梦踏月</p>
           <div class="about-links">
             <a
               class="repo-link"
@@ -1375,6 +1376,16 @@
             >
               <span class="repo-chip">GITHUB</span>
               <span>项目仓库</span>
+              <span class="repo-arrow">↗</span>
+            </a>
+            <a
+              class="repo-link"
+              href="https://www.bilibili.com/video/BV1r26cB3EYL/"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span class="repo-chip">BILIBILI</span>
+              <span>介绍视频</span>
               <span class="repo-arrow">↗</span>
             </a>
           </div>
